--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>🌟 Olga & Mårten 🌟</title>
+    <title>❤️ Linnea & Albert ❤️</title>
     <script src="https://apis.google.com/js/api.js">
-      
+
     </script>
   </head>
   <body>
